--- a/.travis.yml
+++ b/.travis.yml
@@ -12,29 +12,35 @@ cache:
     - $HOME/.composer/cache
 
 php:
-# - 5.4
-# - 5.5
  - 5.6
-#- 7.0
 
-matrix:
-  allow_failures:
-    - php: 7.0
 
 env:
- matrix:
-    - DB=pgsql MOODLE_BRANCH=MOODLE_27_STABLE
-    - DB=pgsql MOODLE_BRANCH=MOODLE_28_STABLE
-    - DB=pgsql MOODLE_BRANCH=MOODLE_29_STABLE
-    - DB=pgsql MOODLE_BRANCH=MOODLE_30_STABLE
-    - DB=pgsql MOODLE_BRANCH=master
-    - DB=mysqli MOODLE_BRANCH=MOODLE_27_STABLE
-    - DB=mysqli MOODLE_BRANCH=MOODLE_28_STABLE
-    - DB=mysqli MOODLE_BRANCH=MOODLE_29_STABLE
-    - DB=mysqli MOODLE_BRANCH=MOODLE_30_STABLE
-    - DB=mysqli MOODLE_BRANCH=master
+  - DB=pgsql MOODLE_BRANCH=MOODLE_27_STABLE
+  - DB=pgsql MOODLE_BRANCH=MOODLE_28_STABLE
+  - DB=pgsql MOODLE_BRANCH=MOODLE_29_STABLE
+  - DB=pgsql MOODLE_BRANCH=MOODLE_30_STABLE
+  - DB=pgsql MOODLE_BRANCH=master
+  - DB=mysqli MOODLE_BRANCH=MOODLE_27_STABLE
+  - DB=mysqli MOODLE_BRANCH=MOODLE_28_STABLE
+  - DB=mysqli MOODLE_BRANCH=MOODLE_29_STABLE
+  - DB=mysqli MOODLE_BRANCH=MOODLE_30_STABLE
+  - DB=mysqli MOODLE_BRANCH=master
+matrix:
+  include:
+    - php: 7.0
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_30_STABLE
+    - php: 7.0
+      env: DB=pgsql MOODLE_BRANCH=master
+    - php: 7.0
+      env: DB=mysqli MOODLE_BRANCH=MOODLE_30_STABLE
+    - php: 7.0
+      env: DB=mysqli MOODLE_BRANCH=master
+
+
 
 before_install:
+  - phpenv config-rm xdebug.ini
   - cd ../..
   - composer selfupdate
   - composer create-project -n --no-dev moodlerooms/moodle-plugin-ci ci ^1
@@ -46,12 +52,12 @@ install:
 script:
   - moodle-plugin-ci phplint
   - moodle-plugin-ci phpcpd
-  - moodle-plugin-ci phpmd
+#  - moodle-plugin-ci phpmd         # phpmd is a bit overzealous
   - moodle-plugin-ci codechecker
-# - moodle-plugin-ci csslint        # No CSS
+  - moodle-plugin-ci csslint
   - moodle-plugin-ci shifter
-# - moodle-plugin-ci jshint         # NO JS
+  - moodle-plugin-ci jshint
   - moodle-plugin-ci validate
   - moodle-plugin-ci phpunit
-# - moodle-plugin-ci behat
+  - moodle-plugin-ci behat
 
