--- a/.travis.yml
+++ b/.travis.yml
@@ -31,9 +31,9 @@ env:
   - DB=mysqli MOODLE_BRANCH=master
 matrix:
     - php: 7.1
-      env: DB=pgsql MOODLE_BRANCH=master
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE
     - php: 7.1
-      env: DB=mysqli MOODLE_BRANCH=master
+      env: DB=mysqli MOODLE_BRANCH=MOODLE_38_STABLE
     - php: 7.3
       env: DB=pgsql MOODLE_BRANCH=master
     - php: 7.3
@@ -45,16 +45,12 @@ matrix:
 before_install:
   - phpenv config-rm xdebug.ini
   - cd ../..
-  - if [ ${TRAVIS_PHP_VERSION:0:3} == "7.1" ]; then export BRANCH="MOODLE_38_STABLE"; else export BRANCH="master"; fi
-  - git clone --branch "$BRANCH" --mirror 'https://github.com/moodlehq/moodle-behat-extension.git' '/home/travis/.composer/cache/vcs/git-github.com-moodlehq-moodle-behat-extension.git/' || true
+  - git clone --mirror 'https://github.com/moodlehq/moodle-behat-extension.git' '/home/travis/.composer/cache/vcs/git-github.com-moodlehq-moodle-behat-extension.git/' || true
   - composer selfupdate
   - composer create-project -n --no-dev moodlerooms/moodle-plugin-ci ci ^1
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
 
 install:
-  - if [ ${TRAVIS_PHP_VERSION:0:3} == "7.1" ]; then
-      moodle-plugin-ci add-plugin --branch 4.4 symfony/filesystem;
-    fi
   - moodle-plugin-ci install
 
 script:
