--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,12 @@
 language: php
 
-notifications:
-  email:
-    recipients:
-      - nicholashoobin@catalyst-au.net
-
-sudo: false
-
 cache:
   directories:
     - $HOME/.composer/cache
+    - $HOME/.npm
 
 php:
+ - 7.1
  - 7.2
 
 addons:
@@ -23,27 +18,37 @@ services:
 env:
   - DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE
   - DB=pgsql MOODLE_BRANCH=MOODLE_36_STABLE
-  - DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE 
+  - DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE
+  - DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE
+  - DB=pgsql MOODLE_BRANCH=MOODLE_39_STABLE
   - DB=pgsql MOODLE_BRANCH=master
+
   - DB=mysqli MOODLE_BRANCH=MOODLE_35_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_36_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_37_STABLE
+  - DB=mysqli MOODLE_BRANCH=MOODLE_38_STABLE
+  - DB=mysqli MOODLE_BRANCH=MOODLE_39_STABLE
   - DB=mysqli MOODLE_BRANCH=master
+
 matrix:
+  exclude:
     - php: 7.1
-      env: DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE
-    - php: 7.1
-      env: DB=mysqli MOODLE_BRANCH=MOODLE_38_STABLE
-    - php: 7.3
       env: DB=pgsql MOODLE_BRANCH=master
-    - php: 7.3
+    - php: 7.1
       env: DB=mysqli MOODLE_BRANCH=master
-
-
+    - php: 7.1
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_39_STABLE
+    - php: 7.1
+      env: DB=mysqli MOODLE_BRANCH=MOODLE_39_STABLE
 
 
 before_install:
+  - export MOODLE_VERSION=$(echo "$MOODLE_BRANCH" | cut -d'_' -f 2)
+  - sudo apt-get update
   - phpenv config-rm xdebug.ini
+  - if [ "$MOODLE_VERSION" = 36 ] || [ "$MOODLE_VERSION" -le 34 ]; then NVMVERSION=8.9; else NVMVERSION=14.0.0; fi
+  - nvm install $NVMVERSION;
+  - nvm use $NVMVERSION;
   - cd ../..
   - git clone --mirror 'https://github.com/moodlehq/moodle-behat-extension.git' '/home/travis/.composer/cache/vcs/git-github.com-moodlehq-moodle-behat-extension.git/' || true
   - composer selfupdate
@@ -54,7 +59,6 @@ install:
   - moodle-plugin-ci install
 
 script:
-  - php moodle/auth/enrolkey/tests/privacy/privacy.php
   - moodle-plugin-ci phplint
   - moodle-plugin-ci phpcpd
 #  - moodle-plugin-ci phpmd         # phpmd is a bit overzealous
@@ -65,4 +69,5 @@ script:
   - moodle-plugin-ci validate
   - moodle-plugin-ci phpunit
   - moodle-plugin-ci behat
-
+  - /home/travis/build/moodle/vendor/bin/phpunit "provider_testcase" /home/travis/build/moodle/privacy/tests/provider_test.php
+  - /home/travis/build/moodle/vendor/bin/phpunit "tool_dataprivacy_expired_contexts_testcase" /home/travis/build/moodle/admin/tool/dataprivacy/tests/expired_contexts_test.php
