--- a/.github/workflows/35.yml
+++ b/.github/workflows/35.yml
@@ -2,7 +2,7 @@ name: Moodle plugin CI for Moodle 3.5
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
-on: push
+on: [push, pull_request]
 
 jobs:
   citest:
@@ -11,7 +11,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:9.5
+        image: postgres:9.6
         env:
           POSTGRES_USER: 'postgres'
           POSTGRES_HOST_AUTH_METHOD: 'trust'
@@ -24,7 +24,7 @@ jobs:
           - 5432:5432
 
       mariadb:
-        image: mariadb:10
+        image: mariadb:10.5
         env:
           MYSQL_USER: 'root'
           MYSQL_ALLOW_EMPTY_PASSWORD: "true"
